pomerium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pomerium
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: pomerium
        image: pomerium/pomerium:v0.8.3
        imagePullPolicy: Always
        ports:
        - containerPort: 443
          name: https
          protocol: TCP      
        args:
          - -config
          - /etc/pomerium/policy.yaml
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 443
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /ping
            port: 443
            scheme: HTTP
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - mountPath: /etc/pomerium/
          name: policy
      volumes:
      - configMap:
          defaultMode: 420
          name: pomerium-policy
        name: policy
