pomerium/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pomerium
spec:
  ports:
    - port: 443
      name: https
