pomerium/ingress.yaml
---
# Source: pomerium/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pomerium
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    cert-manager.io/issuer: $(CERT_MANAGER_ISSUER)
spec:
  rules:
    - host: $(POMERIUM_AUTHENTICATE_HOST)
      http:
        paths:
          - paths:
            backend:
              serviceName: pomerium
              servicePort: 443
    - host: $(POMERIUM_AUTHORIZE_HOST)
      http:
        paths:
          - paths:
            backend:
              serviceName: pomerium
              servicePort: 443
    - host: $(POMERIUM_FWDAUTH_HOST)
      http:
        paths:
          - paths:
            backend:
              serviceName: pomerium
              servicePort: 443
---
